--- a/ProgrammingAssignment4/ProgrammingAssignment4.html
+++ b/ProgrammingAssignment4/ProgrammingAssignment4.html
@@ -14,7 +14,7 @@
       <div><button id="button2" onclick="toggleFS();">Toggle Fill/Stroke</button></div>
     </div>
     <div style="float:left; width:15%">
-        <div><h3>Skeleton Density</h3><input id="slider4" type="range" min="10" max="40" /></div>
+        <div><h3>Triangle Density</h3><input id="slider4" type="range" min="10" max="40" /></div>
         <div><button id="button" onclick="toggle();">Toggle Ortho/Persp</button></div>
         <div><h3>Motion speed</h3><input id="slider2" type="range" min="0.5" max="4" step="0.05" /></div>
         <div><h3>Turn off motion 1</h3><input id="bool1" type="checkbox"/></div>
