--- a/ProgrammingAssignment6/ProgrammingAssignment6.html
+++ b/ProgrammingAssignment6/ProgrammingAssignment6.html
@@ -12,11 +12,9 @@
       <div><h3>Rotate By Z Axis</h3><input id="slider1" type="range" min="-50" max="50" /></div>
       <div><h3>Vision Level</h3><input id="slider3" class="vertical-range" type="range" min="-100" max="100" /></div>
       <div><h3>Numbers of objects</h3><input id="slider5" type="range" min="1" max="4"/></div>
-      <div><button id="button2" onclick="toggleFS();">Toggle Fill/Stroke</button></div>
     </div>
     <div style="float:left; width:15%">
-        <div><h3>Triangle Density</h3><input id="slider4" type="range" min="10" max="40" /></div>
-        <div><button id="button" onclick="toggle();">Toggle Ortho/Persp</button></div>
+        <div><h3>Triangle Density</h3><input id="slider4" type="range" min="10" max="60" /></div>
         <div><h3>Motion speed</h3><input id="slider2" type="range" min="0.5" max="4" step="0.05" /></div>
         <div><h3>Turn off motion 1</h3><input id="bool1" type="checkbox"/></div>
         <div><h3>Turn off motion 2</h3><input id="bool2" type="checkbox"/></div>
@@ -39,6 +37,8 @@
     varying vec3 fNormal;
     varying vec3 fPosition;
     varying vec3 world;
+    varying float ftime;
+    uniform float time;
 
     void main(void){
       fColor = vColor;
@@ -46,6 +46,7 @@
       fPosition = vPosition;
       world = (uMVP * vec4(vPosition, 1.0)).xyz;
       gl_Position = uMVP * vec4(vPosition, 1.0);
+      ftime = time;
     }
   </script>
   <script id="fs" type="not-js">
@@ -54,23 +55,25 @@
     varying vec3 fNormal;
     varying vec3 fPosition;
     varying vec3 world;
+    varying float ftime;
     const float Pi=3.1415926;
-    const float ambient_coeff   = 0.3;
+    const float ambient_coeff   = 0.2;
     const float specular_coeff  = 1.0;
-    const float specular_exp    = 50.0;
+    const float specular_exp    = 20.0;
     const vec3  light_color     = vec3(1.0,1.0,1.0);
     void main()
     {
-      vec3 dir = vec3(cos(angle),0,sin(angle));
+      float angle = ftime;
+      vec3 dir = vec3(cos(angle),sin(angle),0);
       vec3 color = normalize(fColor);
-      vec3 l = normalize(dir);
+      vec3 l = normalize(dir)*50.0;
       vec3 n = normalize(fNormal);
       vec3 e = normalize(-fPosition);
-      vec3 h = normalize ((e+l)/2.0);
+      vec3 h = normalize (e+l);
       // Fixed light
       vec3 dir2 = vec3(0.5,0.5,1.0);
-      vec3 l2 = normalize(dir2);
-      vec3 h2 = normalize((e+l2)/2.0);
+      vec3 l2 = normalize(dir2)*50.0;
+      vec3 h2 = normalize(e+l2);
 
       // Three color circles
       color.r = smoothstep(0.0, 20.0, mod(sqrt(pow(fPosition.x,2.0)+pow(fPosition.y,2.0)),20.0))+0.5;
@@ -111,13 +114,13 @@
 
 
 
-      float diffuse = dot(fNormal,l);
+      float diffuse = dot(fNormal,dir)*0.7;
       vec3 ambient_color  = ambient_coeff  * color;
       vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * light_color;
-      vec3 specular2 = specular_coeff * pow(max(0.0,dot(n,h2)),specular_exp) * light_color;
+      vec3 specular2 = specular_coeff * pow(max(0.0,dot(n,h2)),specular_exp*2.0) * light_color;
 
-      gl_FragColor = vec4(ambient_color+color*diffuse+specular_color+specular2+vColor2*0.2,1.0);
-      gl_FragColor = vec4(ambient_color+specular_color+specular2+vColor2*0.2,1.0);
+      gl_FragColor = vec4(ambient_color+color*diffuse+specular_color+specular2*0.5+vColor2*0.3,1.0);
+      //gl_FragColor = vec4(color*diffuse,1.0);
     }
   </script>
 
@@ -135,13 +138,11 @@
     var slider3 = document.getElementById('slider3');     //vertical vision level
     slider3.value = 100;
     var slider4 = document.getElementById('slider4');     //skeleton density
-    slider4.value = 13;
+    slider4.value = 30;
     var slider5 = document.getElementById('slider5');     //number of object
     slider5.value = 3;
     var bool1 = document.getElementById('bool1');         //turn off motion 1
     var bool2 = document.getElementById('bool2');         //turn off motion 2
-    var persp = true;                                     //boolean for toggle between ortho/persp
-    var fill = true;                                      //boolean for toggle between fill/stroke
     var axis1 = [1,0,0];                                  // x axis
     var axis2 = [0,1,0];                                  // y axis
     var axis3 = [0,0,1];                                  // z axis
@@ -182,6 +183,8 @@
 
     shaderProgram.MVPmatrix = gl.getUniformLocation(shaderProgram,"uMVP");
 
+    shaderProgram.AngleTime = gl.getUniformLocation(shaderProgram,"time");
+
     var vertexColors;
     var vertexPos;
     var vertexNormals;
@@ -196,7 +199,7 @@
 
       vertexColors = new Float32Array (vertexPos.length);
       for(var i = 0 ; i<vertexPos.length; i ++){
-        vertexColors[i]=Math.max(0.0,0.5*vertexPos[i]/200);
+        vertexColors[i]=0.0;
       }
 
       vertexNormals = new Float32Array (vertexPos.length);
@@ -367,15 +370,7 @@
 
       var Tmodel = m4.axisRotation(axis3,angle1);
       var Tcamera = m4.inverse(m4.lookAt(eye,target,up));
-      var Tprojection;
-
-      //toggle feature
-      if(persp){
-        Tprojection=m4.perspective(Math.PI/4,1,4,10000);
-      }
-      else {
-        Tprojection=m4.ortho(-250,250,-200,300,-2,2);
-      }
+      var Tprojection=m4.perspective(Math.PI/4,1,4,10000);
 
       var Tmvp=m4.multiply(m4.multiply(Tmodel,Tcamera),Tprojection);
 
@@ -385,6 +380,7 @@
 
 
         gl.uniformMatrix4fv(shaderProgram.MVPmatrix,false,Tmvp);
+        gl.uniform1f(shaderProgram.AngleTime,ag);
 
         gl.bindBuffer(gl.ARRAY_BUFFER, colorBuffer);
         gl.vertexAttribPointer(shaderProgram.ColorAttribute, colorBuffer.itemSize,
@@ -421,12 +417,6 @@
       	gl.bufferData(gl.ARRAY_BUFFER, vertexNormals, gl.STATIC_DRAW);
       	normalBuffer.itemSize = 3;
       	normalBuffer.numItems = vertexPos.length/3;
-      }
-      function toggle(){
-        persp = !persp;
-      }
-      function toggleFS(){
-        fill = !fill;
       }
       draw();
     }
