--- a/ProgrammingAssignment6/ProgrammingAssignment6.html
+++ b/ProgrammingAssignment6/ProgrammingAssignment6.html
@@ -216,7 +216,7 @@
           var z2=vertexPos[i+5];
           var z3=vertexPos[i+8];
 
-          var vec1 = new Float32Array([x1-x2,y1-y2,z1-z2])
+          var vec1 = new Float32Array([x1-x2,y1-y2,z1-z2]);
           var vec2 = new Float32Array([x1-x3,y1-y3,z1-z3]);
           var vecN = twgl.v3.normalize(twgl.v3.cross(vec1,vec2));
           if(i%2==0){
