--- a/ProgrammingAssignment7/index.html
+++ b/ProgrammingAssignment7/index.html
@@ -65,17 +65,17 @@
     varying vec3 pos;
     const float ambient_coeff = 0.2;
     const float specular_coeff  = 1.0;
-    const float specular_exp    = 20.0;
+    const float specular_exp    = 100.0;
     void main(void) {
         vec4 vNormal = normalize(tModel * vec4(normal,0.0));
         float diffuse = .5*max(0.0,(dot(normalize(vNormal), vec4(normalize(dLight),0.0))));
-        vec3 l = normalize(dLight);
-        vec3 n = vNormal.xyz;
+        vec3 l = normalize(dLight)*2.0;
+        vec3 n = normalize(vNormal.xyz);
         vec3 e = normalize(-pos);
-        vec3 h = normalize (e+l);
+        vec3 h = normalize(e+l);
         vec3 ambient_color = ambient_coeff * fcolor;
         vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * cLight;
-        gl_FragColor = vec4(ambient_color + specular_color + diffuse * fcolor, 1.0);
+        gl_FragColor = vec4(ambient_color + specular_color + diffuse * (cLight+fcolor)/2.0, 1.0);
     }
 </script>
 <script id="cube-vs" type="notjs">
