--- a/ProgrammingAssignment7/index.html
+++ b/ProgrammingAssignment7/index.html
@@ -16,6 +16,7 @@
 <script src="ExampleObjects/ground.js"></script>
 
 <!-- This is where we load the objects for the world -->
+<script src="Objects/Flag.js"></script>
 <script src="Objects/Building.js"></script>
 
 <!-- I am adding the helicopter -->
