--- a/ProgrammingAssignment7/index.html
+++ b/ProgrammingAssignment7/index.html
@@ -21,9 +21,10 @@
 
 <!-- I am adding the helicopter -->
 <script src="Helicopter/helicopter.js"></script>
-
+<script src="Objects/helicopterMesh.js"></script>
 <!-- This gets loaded LAST (actually, it probably doesn't have to) -->
 <script src="graphicstown.js"></script>
+
 </body>
 
 <!-- all of the shaders get stuck here in the HTML because
