--- a/ProgrammingAssignment7/ProgrammingAssignment7.html
+++ b/ProgrammingAssignment7/ProgrammingAssignment7.html
@@ -5,7 +5,7 @@
   -->
 <head>
     <meta charset="UTF-8">
-    <title>GraphicsTown JS 2015!</title>
+    <title>PA7</title>
 </head>
 <body>
 <!-- load this stuff first -->
