--- a/ProgrammingAssignment8/ProgrammingAssignment8.html
+++ b/ProgrammingAssignment8/ProgrammingAssignment8.html
@@ -35,12 +35,14 @@
   precision highp float;
   attribute vec3 vPosition;
   attribute vec3 vNormal;
+  attribute vec2 vTexCorrd;
   varying vec3 normal;
   varying vec3 dLight;
   varying vec3 cLight;
   varying mat4 tModel;
   varying vec3 pos;
   varying vec3 fcolor;
+  varying vec2 fTexCoord;
   uniform mat4 view;
   uniform mat4 proj;
   uniform mat4 model;
@@ -48,13 +50,14 @@
   uniform vec3 lightColor;
   uniform vec3 objColor;
   void main(void) {
+      pos = (view * model * vec4(vPosition, 1.0)).xyz;
       gl_Position = proj * view * model * vec4(vPosition, 1.0);
-      normal = vNormal;
-      dLight = lightdir;
+      normal = (view * model * vec4(vNormal,0.0)).xyz;
+      dLight = (view * model * vec4(lightdir,0.0)).xyz;
       cLight = lightColor;
       tModel = model;
-      pos = vPosition;
       fcolor = objColor;
+      fTexCoord = vTexCorrd;
   }
 </script>
 <script id="building-fs" type="notjs">
@@ -65,9 +68,23 @@
     varying mat4 tModel;
     varying vec3 fcolor;
     varying vec3 pos;
+    varying vec2 fTexCoord;
     const float ambient_coeff = 0.2;
     const float specular_coeff  = 1.0;
     const float specular_exp    = 100.0;
+    vec3 Texture(vec2 tc)
+    {
+      vec3 result;
+      if(mod(tc.y+tc.x*2.0,0.1) >= .09 || mod(tc.y-tc.x*2.0,0.1) >= .09){
+        result.x = -1.0;
+        result.y = -1.0;
+        result.z = -1.0;
+        return result;
+      }
+      else{
+        return vec3(0.0,0.0,0.0);
+      }
+    }
     void main(void) {
         vec4 vNormal = normalize(tModel * vec4(normal,0.0));
         float diffuse = .5*max(0.0,(dot(normalize(vNormal), vec4(normalize(dLight),0.0))));
@@ -77,7 +94,8 @@
         vec3 h = normalize(e+l);
         vec3 ambient_color = ambient_coeff * fcolor;
         vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * cLight;
-        gl_FragColor = vec4(ambient_color + specular_color + diffuse * (cLight+fcolor)/2.0, 1.0);
+
+        gl_FragColor = vec4(Texture(fTexCoord)+ambient_color + specular_color + diffuse * (3.0*cLight+fcolor)/4.0, 1.0);
     }
 </script>
 <script id="cube-vs" type="notjs">
