--- a/ProgrammingAssignment8/ProgrammingAssignment8.html
+++ b/ProgrammingAssignment8/ProgrammingAssignment8.html
@@ -13,14 +13,15 @@
 <script src="Libraries/panel.js"></script>
 <script src="Libraries/arcball.js"></script>
 <script src="grobject.js"></script>
-<script src="ExampleObjects/ground.js"></script>
+<script src="Objects/ground.js"></script>
 
 <!-- This is where we load the objects for the world -->
 <script src="Objects/Flag.js"></script>
 <script src="Objects/Building.js"></script>
-
+<script src="Objects/birdnet.objjs"></script>
+<script src="Objects/Birdnet.js"></script>
 <!-- I am adding the helicopter -->
-<script src="Helicopter/helicopter.js"></script>
+<script src="Objects/helicopter.js"></script>
 <script src="Objects/helicopterMesh.js"></script>
 <!-- This gets loaded LAST (actually, it probably doesn't have to) -->
 <script src="graphicstown.js"></script>
@@ -98,14 +99,120 @@
         gl_FragColor = vec4(Texture(fTexCoord)+ambient_color + specular_color + diffuse * (3.0*cLight+fcolor)/4.0, 1.0);
     }
 </script>
+
+<script id="heli-vs" type="notjs">
+  precision highp float;
+  attribute vec3 vPosition;
+  attribute vec3 vNormal;
+  varying vec3 normal;
+  varying vec3 dLight;
+  varying vec3 cLight;
+  varying mat4 tModel;
+  varying vec3 pos;
+  varying vec3 fcolor;
+  uniform mat4 view;
+  uniform mat4 proj;
+  uniform mat4 model;
+  uniform vec3 lightdir;
+  uniform vec3 lightColor;
+  uniform vec3 objColor;
+  void main(void) {
+      pos = (view * model * vec4(vPosition, 1.0)).xyz;
+      gl_Position = proj * view * model * vec4(vPosition, 1.0);
+      normal = (view * model * vec4(vNormal,0.0)).xyz;
+      dLight = (view * model * vec4(lightdir,0.0)).xyz;
+      cLight = lightColor;
+      tModel = model;
+      fcolor = objColor;
+  }
+</script>
+<script id="heli-fs" type="notjs">
+    precision highp float;
+    varying vec3 normal;
+    varying vec3 dLight;
+    varying vec3 cLight;
+    varying mat4 tModel;
+    varying vec3 fcolor;
+    varying vec3 pos;
+    const float ambient_coeff = 0.2;
+    const float specular_coeff  = 1.0;
+    const float specular_exp    = 100.0;
+    void main(void) {
+        vec4 vNormal = normalize(tModel * vec4(normal,0.0));
+        float diffuse = .5*max(0.0,(dot(normalize(vNormal), vec4(normalize(dLight),0.0))));
+        vec3 l = normalize(dLight)*2.0;
+        vec3 n = normalize(vNormal.xyz);
+        vec3 e = normalize(-pos);
+        vec3 h = normalize(e+l);
+        vec3 ambient_color = ambient_coeff * fcolor;
+        vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * cLight;
+
+        gl_FragColor = vec4(ambient_color + specular_color + diffuse * (3.0*cLight+fcolor)/4.0, 1.0);
+    }
+</script>
+
+<script id="birdnet-vs" type="notjs">
+  precision highp float;
+  attribute vec3 vPosition;
+  attribute vec3 vNormal;
+  attribute vec2 vTexCorrd;
+  varying vec3 normal;
+  varying vec3 dLight;
+  varying vec3 cLight;
+  varying mat4 tModel;
+  varying vec3 pos;
+  varying vec2 fTexCoord;
+  uniform mat4 view;
+  uniform mat4 proj;
+  uniform mat4 model;
+  uniform vec3 lightdir;
+  uniform vec3 lightColor;
+  void main(void) {
+      pos = (view * model * vec4(vPosition, 1.0)).xyz;
+      gl_Position = proj * view * model * vec4(vPosition, 1.0);
+      normal = (view * model * vec4(vNormal,0.0)).xyz;
+      dLight = (view * model * vec4(lightdir,0.0)).xyz;
+      cLight = lightColor;
+      tModel = model;
+      fTexCoord = vTexCorrd;
+  }
+</script>
+<script id="birdnet-fs" type="notjs">
+    precision highp float;
+    varying vec3 normal;
+    varying vec3 dLight;
+    varying vec3 cLight;
+    varying mat4 tModel;
+    varying vec3 pos;
+    varying vec2 fTexCoord;
+    uniform sampler2D uTexture;
+    const float ambient_coeff = 0.5;
+    const float specular_coeff  = 0.5;
+    const float specular_exp    = 100.0;
+
+    void main(void) {
+        vec4 vNormal = normalize(tModel * vec4(normal,0.0));
+        float diffuse = .5*max(0.0,(dot(normalize(vNormal), vec4(normalize(dLight),0.0))));
+        vec3 l = normalize(dLight)*2.0;
+        vec3 n = normalize(vNormal.xyz);
+        vec3 e = normalize(-pos);
+        vec3 h = normalize(e+l);
+        vec4 textureColor = texture2D(uTexture,fTexCoord);
+        vec3 tcolor = textureColor.xyz;
+        vec3 ambient_color = ambient_coeff * tcolor;
+        vec3 specular_color = specular_coeff * pow(max(0.0,dot(n,h)),specular_exp) * cLight;
+        gl_FragColor = vec4(ambient_color + specular_color + diffuse * (3.0*cLight+tcolor)/4.0, 1.0);
+    }
+</script>
+
 <script id="cube-vs" type="notjs">
-// specialized shader for the simple cube
-// we assume that the model matrix works as the normal
-//      matrix - this only is try if the model matrix
-//      it a rotate/translate
-//      (uniform scale is OK since we re-normalize)
-// color is solid
-// simple lighting
+  // specialized shader for the simple cube
+  // we assume that the model matrix works as the normal
+  //      matrix - this only is try if the model matrix
+  //      it a rotate/translate
+  //      (uniform scale is OK since we re-normalize)
+  // color is solid
+  // simple lighting
     precision highp float;
 
     attribute vec3 vpos;
@@ -127,9 +234,9 @@
     }
 </script>
 <script id="cube-fs" type="notjs">
-// simple shader that does vertex coloring
-//  (e.g. the vertex shader figures the lighting
-// note this is used for more than just the cube
+  // simple shader that does vertex coloring
+  //  (e.g. the vertex shader figures the lighting
+  // note this is used for more than just the cube
     precision highp float;
     varying vec3 outColor;
     void main(void) {
